log
Tue 11 Apr 2023 11:50:29 PM UTC: 
 tests:  0|6
total_score: 0/70
5b3b188
Tue 11 Apr 2023 11:51:12 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
42dd9ef
Tue 11 Apr 2023 11:59:44 PM UTC: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
1f66738
Tue 11 Apr 2023 11:59:59 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
334dee6
Wed 12 Apr 2023 12:01:17 AM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|6
total_score: 0/70
e91cdd8
Wed 12 Apr 2023 12:02:11 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
cbaa77a
Thu 13 Apr 2023 01:29:02 PM UTC: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
3296f99
Fri 14 Apr 2023 10:39:07 PM UTC: 
 hashmap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:45:51: error: argument 1 null where non-null expected [-Werror=nonnull]
   45 |     while (map->buckets[posicion]->key != NULL || strcmp(map->buckets[posicion]->key, key) != 0) {
      |                                                   ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from test.c:3:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/string.h:156:12: note: in a call to function ‘strcmp’ declared ‘nonnull’
  156 | extern int strcmp (const char *__s1, const char *__s2)
      |            ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
d7fa8fc
Fri 14 Apr 2023 10:40:23 PM UTC: 
 hashmap.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:4:
In function ‘insertMap’,
    inlined from ‘insertMap’ at hashmap.c:42:6:
hashmap.c:49:51: error: argument 1 null where non-null expected [-Werror=nonnull]
   49 |     while (map->buckets[posicion]->key != NULL || strcmp(map->buckets[posicion]->key, key) != 0) {
      |                                                   ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from test.c:3:
hashmap.c: In function ‘insertMap’:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/string.h:156:12: note: in a call to function ‘strcmp’ declared ‘nonnull’
  156 | extern int strcmp (const char *__s1, const char *__s2)
      |            ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
8acd3c3
Fri 14 Apr 2023 10:41:45 PM UTC: 
 hashmap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:47:51: error: argument 1 null where non-null expected [-Werror=nonnull]
   47 |     while (map->buckets[posicion]->key != NULL || strcmp(map->buckets[posicion]->key, key) != 0) {
      |                                                   ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from test.c:3:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/string.h:156:12: note: in a call to function ‘strcmp’ declared ‘nonnull’
  156 | extern int strcmp (const char *__s1, const char *__s2)
      |            ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
d7ca670
Fri 14 Apr 2023 10:42:16 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
In function ‘insertMap’,
    inlined from ‘insertMap’ at hashmap.c:42:6:
hashmap.c:48:51: error: argument 1 null where non-null expected [-Werror=nonnull]
   48 |     while (map->buckets[posicion]->key != NULL || strcmp(map->buckets[posicion]->key, key) != 0) {
      |                                                   ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from test.c:3:
hashmap.c: In function ‘insertMap’:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/string.h:156:12: note: in a call to function ‘strcmp’ declared ‘nonnull’
  156 | extern int strcmp (const char *__s1, const char *__s2)
      |            ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
12eb27b
Fri 14 Apr 2023 10:48:07 PM UTC: 
 hashmap.c | 39 ++++++++++++++++++++++++++-------------
 1 file changed, 26 insertions(+), 13 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:61:13: error: implicit declaration of function ‘resize’ [-Werror=implicit-function-declaration]
   61 |             resize(map);
      |             ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
f58c6fe
Fri 14 Apr 2023 10:48:56 PM UTC: 
 hashmap.c | 50 ++++++++++++++++++++++++++------------------------
 1 file changed, 26 insertions(+), 24 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:51:17: error: too few arguments to function ‘hash’
   51 |     int index = hash(key) % map->capacity; // Calcular la posición del par en la tabla hash
      |                 ^~~~
hashmap.c:26:6: note: declared here
   26 | long hash( char * key, long capacity) {
      |      ^~~~
Compilation failed
aacc7c9
Fri 14 Apr 2023 10:49:07 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:51:18: error: too few arguments to function ‘hash’
   51 |     long index = hash(key) % map->capacity; // Calcular la posición del par en la tabla hash
      |                  ^~~~
hashmap.c:26:6: note: declared here
   26 | long hash( char * key, long capacity) {
      |      ^~~~
Compilation failed
7c2eba1
Fri 14 Apr 2023 10:49:35 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
8c5b7bb
Fri 14 Apr 2023 10:50:09 PM UTC: 
 hashmap.c | 13 ++++++-------
 1 file changed, 6 insertions(+), 7 deletions(-)
 tests:  5|4
total_score: 30/70
e011709
Fri 14 Apr 2023 10:50:37 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|5
total_score: 20/70
fbf1e6d
Fri 14 Apr 2023 10:51:34 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
77d6520
Fri 14 Apr 2023 10:52:26 PM UTC: 
 hashmap.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  5|4
total_score: 30/70
b35da34
Fri 14 Apr 2023 10:55:32 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
1698275
Fri 14 Apr 2023 11:20:08 PM UTC: 
 hashmap.c | 16 ++++++++--------
 1 file changed, 8 insertions(+), 8 deletions(-)
 tests:  5|4
total_score: 30/70
6e2cce4
Fri 14 Apr 2023 11:24:39 PM UTC: 
 hashmap.c | 24 +++++++++++++++++++++++-
 1 file changed, 23 insertions(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
753ea33
Fri 14 Apr 2023 11:24:54 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:120:12: error: ‘elemTabla’ undeclared (first use in this function)
  120 |     return elemTabla;
      |            ^~~~~~~~~
hashmap.c:120:12: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:121:1: error: control reaches end of non-void function [-Werror=return-type]
  121 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
4bab112
Fri 14 Apr 2023 11:25:14 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  8|3
total_score: 40/70
281f031
Fri 14 Apr 2023 11:30:35 PM UTC: 
 hashmap.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  0|0
ac849ec
Fri 14 Apr 2023 11:31:07 PM UTC: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  11|2
total_score: 50/70
c61fc1a
Fri 14 Apr 2023 11:33:29 PM UTC: 
 hashmap.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  11|2
total_score: 50/70
268f131
Fri 14 Apr 2023 11:33:44 PM UTC: 
 hashmap.c | 4 ----
 1 file changed, 4 deletions(-)
 tests:  11|2
total_score: 50/70
08beecd
Fri 14 Apr 2023 11:33:55 PM UTC: 
 hashmap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  11|2
total_score: 50/70
d56b07d
Fri 14 Apr 2023 11:34:08 PM UTC: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  11|2
total_score: 50/70
0947f63
Fri 14 Apr 2023 11:40:41 PM UTC: 
 hashmap.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
 tests:  13|2
total_score: 50/70
67a7187
Fri 14 Apr 2023 11:43:47 PM UTC: 
 hashmap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  13|2
total_score: 50/70
7d5b46a
